# CodeBLUE

./: .gitignore  README.md  architecture_and_datasets.md  implementation_plan.md  render.yaml  swarm_delegation.md
backend/app/: main.py
threshold/: .env.example  README.md  check_date_types.py  docker-compose.yml  inspect_snowflake_schemas.py  migrate_to_snowflake.py  package-lock.json  railway.toml  scratch.py  test_keeling.py  threshold.db  verify_snowflake_tables.py
threshold/backend/: Dockerfile  config.py  data_pipeline.py  database.py  main.py  requirements.txt  score_pipeline.py  seed_data.py  test_solana.py  threshold.db
threshold/backend/models/: charity.py  counterfactual.py  funding.py  region.py  transaction.py
threshold/backend/routers/: admin.py  charities.py  counterfactual.py  fund.py  funding.py  news.py  regions.py  risk_assessment.py  triage.py
threshold/backend/services/: elevenlabs_service.py  gdelt_service.py  gemini_service.py  geocoding_service.py  ml_service.py  openmart_service.py  ortho_client.py  orthogonal_service.py  precip_service.py  reliefweb_service.py  (+1 more)
threshold/blockchain/: Anchor.toml
threshold/data/: Dockerfile  __init__.py  data_manifest.json  run_all_ingestion.py  seed_backend.py
threshold/docs/: conf.py  index.rst
threshold/frontend/: Dockerfile  index.html
threshold/infrastructure/: requirements.txt  threshold_stack.py
threshold/infrastructure/cdk.out/asset.5965fbb89d55af8107ccc04eff165beeca9ec5ca786020edfdfdbcdffd9c719d/blockchain/programs/threshold_fund/: Cargo.toml
threshold/ml/: train_threshold_net.py
(+155 files in other folders)
