[package]
name = "threshold_fund"
version = "0.1.0"
description = "THRESHOLD devnet funding round scaffold"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "threshold_fund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
